// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Appearance 1`] = `
<div
  className="sc-hAZoDl gyXFzs"
  style={
    Object {
      "background": "#EFF0F6",
      "padding": 50,
    }
  }
>
  <section
    className="sc-ksZaOG brpprN"
    span={4}
  >
    <div
      className="sc-crXcEl dvcSNb"
      gap={1}
    >
      <h3
        className="sc-fnykZs lfSzVV c-text--heading-3"
      >
        Primary Button
      </h3>
      <button
        appearance="primary"
        className="sc-dkzDqf sc-hKMtZM eOixSn jyzXNF"
        data-element="button"
        size="medium"
        variant="medium"
      >
        Button
      </button>
      <button
        appearance="primary"
        className="sc-dkzDqf sc-hKMtZM eOixSn jyzXNF"
        data-element="button"
        disabled={true}
        size="medium"
        variant="medium"
      >
        Disabled
      </button>
    </div>
  </section>
  <section
    className="sc-ksZaOG brpprN"
    span={4}
  >
    <div
      className="sc-crXcEl dvcSNb"
      gap={1}
    >
      <h3
        className="sc-fnykZs lfSzVV c-text--heading-3"
      >
        Primary Ghost (Transparent)
      </h3>
      <button
        appearance="primary-ghost"
        className="sc-dkzDqf sc-gKXOVf eOixSn kXEJUw"
        data-element="button"
        size="medium"
        variant="medium"
      >
        Button
      </button>
      <button
        appearance="primary-ghost"
        className="sc-dkzDqf sc-gKXOVf eOixSn kXEJUw"
        data-element="button"
        disabled={true}
        size="medium"
        variant="medium"
      >
        Disabled
      </button>
    </div>
  </section>
  <section
    className="sc-ksZaOG brpprN"
    span={4}
  >
    <div
      className="sc-crXcEl dvcSNb"
      gap={1}
    >
      <h3
        className="sc-fnykZs lfSzVV c-text--heading-3"
      >
        Secondary Button
      </h3>
      <button
        appearance="secondary"
        className="sc-dkzDqf sc-eCYdqJ hOdlxO hSTXnF"
        data-element="button"
        size="medium"
        variant="medium"
      >
        Button
      </button>
      <button
        appearance="secondary"
        className="sc-dkzDqf sc-eCYdqJ hOdlxO hSTXnF"
        data-element="button"
        disabled={true}
        size="medium"
        variant="medium"
      >
        Disabled
      </button>
    </div>
  </section>
  <section
    className="sc-ksZaOG brpprN"
    span={4}
  >
    <div
      className="sc-crXcEl dvcSNb"
      gap={1}
    >
      <h3
        className="sc-fnykZs lfSzVV c-text--heading-3"
      >
        Dark Button
      </h3>
      <button
        appearance="dark"
        className="sc-dkzDqf sc-jSMfEi eOixSn kcPxMO"
        data-element="button"
        size="medium"
        variant="medium"
      >
        Button
      </button>
      <button
        appearance="dark"
        className="sc-dkzDqf sc-jSMfEi eOixSn kcPxMO"
        data-element="button"
        disabled={true}
        size="medium"
        variant="medium"
      >
        Disabled
      </button>
    </div>
  </section>
  <section
    className="sc-ksZaOG brpprN"
    span={4}
  >
    <div
      className="sc-crXcEl dvcSNb"
      gap={1}
    >
      <h3
        className="sc-fnykZs lfSzVV c-text--heading-3"
      >
        Gradient Button
      </h3>
      <button
        appearance="gradient"
        className="sc-dkzDqf sc-iBkjds eOixSn dusIcB"
        data-element="button"
        size="medium"
        variant="medium"
      >
        Button
      </button>
      <button
        appearance="gradient"
        className="sc-dkzDqf sc-iBkjds eOixSn dusIcB"
        data-element="button"
        disabled={true}
        size="medium"
        variant="medium"
      >
        Disabled
      </button>
    </div>
  </section>
  <section
    className="sc-ksZaOG brpprN"
    span={4}
  >
    <div
      className="sc-crXcEl dvcSNb"
      gap={1}
    >
      <h3
        className="sc-fnykZs lfSzVV c-text--heading-3"
      >
        Text Button default
      </h3>
      <button
        appearance="text"
        className="sc-dkzDqf sc-ftvSup eLXFHP gyjXwR u-fit-content-width"
        data-element="button"
        size="medium"
        variant="medium"
      >
        Button
      </button>
      <button
        appearance="text"
        className="sc-dkzDqf sc-ftvSup eLXFHP gyjXwR u-fit-content-width"
        data-element="button"
        disabled={true}
        size="medium"
        variant="medium"
      >
        Disabled
      </button>
    </div>
  </section>
  <section
    className="sc-ksZaOG brpprN"
    span={4}
  >
    <div
      className="sc-crXcEl dvcSNb"
      gap={1}
    >
      <h3
        className="sc-fnykZs lfSzVV c-text--heading-3"
      >
        Text Button custom color
      </h3>
      <button
        appearance="text"
        className="sc-dkzDqf sc-ftvSup eLXFHP gJsrXC u-fit-content-width"
        color="red"
        data-element="button"
        size="medium"
        variant="medium"
      >
        Button
      </button>
      <button
        appearance="text"
        className="sc-dkzDqf sc-ftvSup eLXFHP gJsrXC u-fit-content-width"
        color="red"
        data-element="button"
        disabled={true}
        size="medium"
        variant="medium"
      >
        Disabled
      </button>
    </div>
  </section>
</div>
`;

exports[`Storyshots Components/Button CustomSizes 1`] = `
<div
  className="sc-jqUVSM gFyWwL"
>
  <div
    className="sc-hAZoDl gyXFzs"
  >
    <section
      className="sc-ksZaOG brpprN"
      span={4}
    >
      <div
        className="sc-crXcEl dvcSNb"
        gap={1}
      >
        <h3
          className="sc-fnykZs lfSzVV c-text--heading-3"
        >
          Small
        </h3>
        <button
          appearance="primary"
          className="sc-dkzDqf sc-hKMtZM gUmaLa jyzXNF"
          data-element="button"
          size="small"
          variant="medium"
        >
          Button
        </button>
      </div>
    </section>
    <section
      className="sc-ksZaOG brpprN"
      span={4}
    >
      <div
        className="sc-crXcEl dvcSNb"
        gap={1}
      >
        <h3
          className="sc-fnykZs lfSzVV c-text--heading-3"
        >
          Medium
        </h3>
        <button
          appearance="primary"
          className="sc-dkzDqf sc-hKMtZM eOixSn jyzXNF"
          data-element="button"
          size="medium"
          variant="medium"
        >
          Button
        </button>
      </div>
    </section>
    <section
      className="sc-ksZaOG brpprN"
      span={4}
    >
      <div
        className="sc-crXcEl dvcSNb"
        gap={1}
      >
        <h3
          className="sc-fnykZs lfSzVV c-text--heading-3"
        >
          Large
        </h3>
        <button
          appearance="primary"
          className="sc-dkzDqf sc-hKMtZM dJKYDL jyzXNF"
          data-element="button"
          size="large"
          variant="medium"
        >
          Button
        </button>
      </div>
    </section>
    <section
      className="sc-ksZaOG brpprN"
      span={4}
    >
      <div
        className="sc-crXcEl dvcSNb"
        gap={1}
      >
        <h3
          className="sc-fnykZs lfSzVV c-text--heading-3"
        >
          Full width
        </h3>
        <button
          appearance="primary"
          className="sc-dkzDqf sc-hKMtZM iKXAtc jyzXNF u-full-width"
          data-element="button"
          size="medium"
          variant="large"
        >
          Button
        </button>
      </div>
    </section>
    <section
      className="sc-ksZaOG brpprN"
      span={4}
    >
      <div
        className="sc-crXcEl dvcSNb"
        gap={1}
      >
        <h3
          className="sc-fnykZs lfSzVV c-text--heading-3"
        >
          Fit content
        </h3>
        <button
          appearance="primary"
          className="sc-dkzDqf sc-hKMtZM kkgIkn jyzXNF u-fit-content-width"
          data-element="button"
          size="medium"
          variant="large"
        >
          Button
        </button>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Components/Button Details 1`] = `
<div
  className="sc-jqUVSM gFyWwL"
>
  <div
    className="sc-hAZoDl gyXFzs"
  >
    <section
      className="sc-ksZaOG brpprN"
      span={4}
    >
      <div
        className="sc-crXcEl dvcSNb"
        gap={1}
      >
        <h3
          className="sc-fnykZs lfSzVV c-text--heading-3"
        >
          Button
        </h3>
        <button
          appearance="primary"
          className="sc-dkzDqf sc-hKMtZM eOixSn jyzXNF"
          data-element="button"
          disabled={false}
          size="medium"
          variant="medium"
        >
          Button
        </button>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Components/Button Icon 1`] = `
<div
  className="sc-hAZoDl gyXFzs"
  style={
    Object {
      "background": "#EFF0F6",
      "padding": 50,
    }
  }
>
  <section
    className="sc-ksZaOG brpprN"
    span={4}
  >
    <div
      className="sc-crXcEl dvcSNb"
      gap={1}
    >
      <h3
        className="sc-fnykZs lfSzVV c-text--heading-3"
      >
        Primary Button
      </h3>
      <section
        className="sc-ksZaOG jtZrUR css-1btod5z"
      >
        <button
          appearance="primary"
          className="sc-dkzDqf sc-hKMtZM kyKQdd jyzXNF"
          data-element="button"
          icon="settings"
          size="large"
          variant="large"
        />
        <button
          appearance="primary"
          className="sc-dkzDqf sc-hKMtZM eJVGuX jyzXNF"
          data-element="button"
          icon="settings"
          size="medium"
          variant="medium"
        />
      </section>
    </div>
  </section>
  <section
    className="sc-ksZaOG brpprN"
    span={4}
  >
    <div
      className="sc-crXcEl dvcSNb"
      gap={1}
    >
      <h3
        className="sc-fnykZs lfSzVV c-text--heading-3"
      >
        Primary Ghost (Transparent)
      </h3>
      <section
        className="sc-ksZaOG jtZrUR css-1btod5z"
      >
        <button
          appearance="primary-ghost"
          className="sc-dkzDqf sc-gKXOVf kyKQdd eVoEKu"
          data-element="button"
          icon="settings"
          size="large"
          variant="large"
        />
        <button
          appearance="primary-ghost"
          className="sc-dkzDqf sc-gKXOVf eJVGuX eVoEKu"
          data-element="button"
          icon="settings"
          size="medium"
          variant="medium"
        />
      </section>
    </div>
  </section>
  <section
    className="sc-ksZaOG brpprN"
    span={4}
  >
    <div
      className="sc-crXcEl dvcSNb"
      gap={1}
    >
      <h3
        className="sc-fnykZs lfSzVV c-text--heading-3"
      >
        Secondary Button
      </h3>
      <section
        className="sc-ksZaOG jtZrUR css-1btod5z"
      >
        <button
          appearance="secondary"
          className="sc-dkzDqf sc-eCYdqJ fGMKEe hUhnoB"
          data-element="button"
          icon="settings"
          size="large"
          variant="large"
        />
        <button
          appearance="secondary"
          className="sc-dkzDqf sc-eCYdqJ hCDODE hUhnoB"
          data-element="button"
          icon="settings"
          size="medium"
          variant="medium"
        />
      </section>
    </div>
  </section>
  <section
    className="sc-ksZaOG brpprN"
    span={4}
  >
    <div
      className="sc-crXcEl dvcSNb"
      gap={1}
    >
      <h3
        className="sc-fnykZs lfSzVV c-text--heading-3"
      >
        Dark Button
      </h3>
      <section
        className="sc-ksZaOG jtZrUR css-1btod5z"
      >
        <button
          appearance="dark"
          className="sc-dkzDqf sc-jSMfEi kyKQdd kcPxMO"
          data-element="button"
          icon="settings"
          size="large"
          variant="large"
        />
        <button
          appearance="dark"
          className="sc-dkzDqf sc-jSMfEi eJVGuX kcPxMO"
          data-element="button"
          icon="settings"
          size="medium"
          variant="medium"
        />
      </section>
    </div>
  </section>
  <section
    className="sc-ksZaOG brpprN"
    span={4}
  >
    <div
      className="sc-crXcEl dvcSNb"
      gap={1}
    >
      <h3
        className="sc-fnykZs lfSzVV c-text--heading-3"
      >
        Gradient Button
      </h3>
      <section
        className="sc-ksZaOG jtZrUR css-1btod5z"
      >
        <button
          appearance="gradient"
          className="sc-dkzDqf sc-iBkjds kyKQdd dusIcB"
          data-element="button"
          icon="settings"
          size="large"
          variant="large"
        />
        <button
          appearance="gradient"
          className="sc-dkzDqf sc-iBkjds eJVGuX dusIcB"
          data-element="button"
          icon="settings"
          size="medium"
          variant="medium"
        />
      </section>
    </div>
  </section>
  <section
    className="sc-ksZaOG brpprN"
    span={4}
  >
    <div
      className="sc-crXcEl dvcSNb"
      gap={1}
    >
      <h3
        className="sc-fnykZs lfSzVV c-text--heading-3"
      >
        Text Button default
      </h3>
      <section
        className="sc-ksZaOG jtZrUR css-1btod5z"
      >
        <button
          appearance="text"
          className="sc-dkzDqf sc-ftvSup fdVBNG gyjXwR"
          data-element="button"
          icon="settings"
          size="large"
          variant="large"
        />
        <button
          appearance="text"
          className="sc-dkzDqf sc-ftvSup eAkEZg gyjXwR"
          data-element="button"
          icon="settings"
          size="medium"
          variant="medium"
        />
      </section>
    </div>
  </section>
  <section
    className="sc-ksZaOG brpprN"
    span={4}
  >
    <div
      className="sc-crXcEl dvcSNb"
      gap={1}
    >
      <h3
        className="sc-fnykZs lfSzVV c-text--heading-3"
      >
        Text Button custom color
      </h3>
      <section
        className="sc-ksZaOG jtZrUR css-1btod5z"
      >
        <button
          appearance="text"
          className="sc-dkzDqf sc-ftvSup fdVBNG gJsrXC"
          color="red"
          data-element="button"
          icon="settings"
          size="large"
          variant="large"
        />
        <button
          appearance="text"
          className="sc-dkzDqf sc-ftvSup eAkEZg gJsrXC"
          color="red"
          data-element="button"
          icon="settings"
          size="medium"
          variant="medium"
        />
      </section>
    </div>
  </section>
</div>
`;

exports[`Storyshots Components/Button Text with Icon 1`] = `
<div
  className="sc-hAZoDl gyXFzs"
  style={
    Object {
      "background": "#EFF0F6",
      "padding": 50,
    }
  }
>
  <section
    className="sc-ksZaOG brpprN"
    span={4}
  >
    <div
      className="sc-crXcEl dvcSNb"
      gap={1}
    >
      <h3
        className="sc-fnykZs lfSzVV c-text--heading-3"
      >
        Primary Button
      </h3>
      <button
        appearance="primary"
        className="sc-dkzDqf sc-hKMtZM eOixSn jyzXNF"
        data-element="button"
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-jqUVSM cKPcLS"
          gap={0.75}
        />
      </button>
      <button
        appearance="primary"
        className="sc-dkzDqf sc-hKMtZM eOixSn jyzXNF"
        data-element="button"
        disabled={true}
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-jqUVSM cKPcLS"
          gap={0.75}
        />
      </button>
    </div>
  </section>
  <section
    className="sc-ksZaOG brpprN"
    span={4}
  >
    <div
      className="sc-crXcEl dvcSNb"
      gap={1}
    >
      <h3
        className="sc-fnykZs lfSzVV c-text--heading-3"
      >
        Primary Ghost (Transparent)
      </h3>
      <button
        appearance="primary-ghost"
        className="sc-dkzDqf sc-gKXOVf eOixSn kXEJUw"
        data-element="button"
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-jqUVSM cKPcLS"
          gap={0.75}
        />
      </button>
      <button
        appearance="primary-ghost"
        className="sc-dkzDqf sc-gKXOVf eOixSn kXEJUw"
        data-element="button"
        disabled={true}
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-jqUVSM cKPcLS"
          gap={0.75}
        />
      </button>
    </div>
  </section>
  <section
    className="sc-ksZaOG brpprN"
    span={4}
  >
    <div
      className="sc-crXcEl dvcSNb"
      gap={1}
    >
      <h3
        className="sc-fnykZs lfSzVV c-text--heading-3"
      >
        Secondary Button
      </h3>
      <button
        appearance="secondary"
        className="sc-dkzDqf sc-eCYdqJ hOdlxO hSTXnF"
        data-element="button"
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-jqUVSM cKPcLS"
          gap={0.75}
        />
      </button>
      <button
        appearance="secondary"
        className="sc-dkzDqf sc-eCYdqJ hOdlxO hSTXnF"
        data-element="button"
        disabled={true}
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-jqUVSM cKPcLS"
          gap={0.75}
        />
      </button>
    </div>
  </section>
  <section
    className="sc-ksZaOG brpprN"
    span={4}
  >
    <div
      className="sc-crXcEl dvcSNb"
      gap={1}
    >
      <h3
        className="sc-fnykZs lfSzVV c-text--heading-3"
      >
        Dark Button
      </h3>
      <button
        appearance="dark"
        className="sc-dkzDqf sc-jSMfEi eOixSn kcPxMO"
        data-element="button"
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-jqUVSM cKPcLS"
          gap={0.75}
        />
      </button>
      <button
        appearance="dark"
        className="sc-dkzDqf sc-jSMfEi eOixSn kcPxMO"
        data-element="button"
        disabled={true}
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-jqUVSM cKPcLS"
          gap={0.75}
        />
      </button>
    </div>
  </section>
  <section
    className="sc-ksZaOG brpprN"
    span={4}
  >
    <div
      className="sc-crXcEl dvcSNb"
      gap={1}
    >
      <h3
        className="sc-fnykZs lfSzVV c-text--heading-3"
      >
        Gradient Button
      </h3>
      <button
        appearance="gradient"
        className="sc-dkzDqf sc-iBkjds eOixSn dusIcB"
        data-element="button"
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-jqUVSM cKPcLS"
          gap={0.75}
        />
      </button>
      <button
        appearance="gradient"
        className="sc-dkzDqf sc-iBkjds eOixSn dusIcB"
        data-element="button"
        disabled={true}
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-jqUVSM cKPcLS"
          gap={0.75}
        />
      </button>
    </div>
  </section>
  <section
    className="sc-ksZaOG brpprN"
    span={4}
  >
    <div
      className="sc-crXcEl dvcSNb"
      gap={1}
    >
      <h3
        className="sc-fnykZs lfSzVV c-text--heading-3"
      >
        Text Button default
      </h3>
      <button
        appearance="text"
        className="sc-dkzDqf sc-ftvSup weoio gyjXwR"
        data-element="button"
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-jqUVSM cKPcLS"
          gap={0.75}
        />
      </button>
      <button
        appearance="text"
        className="sc-dkzDqf sc-ftvSup weoio gyjXwR"
        data-element="button"
        disabled={true}
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-jqUVSM cKPcLS"
          gap={0.75}
        />
      </button>
    </div>
  </section>
  <section
    className="sc-ksZaOG brpprN"
    span={4}
  >
    <div
      className="sc-crXcEl dvcSNb"
      gap={1}
    >
      <h3
        className="sc-fnykZs lfSzVV c-text--heading-3"
      >
        Text Button custom color
      </h3>
      <button
        appearance="text"
        className="sc-dkzDqf sc-ftvSup weoio gJsrXC"
        color="red"
        data-element="button"
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-jqUVSM cKPcLS"
          gap={0.75}
        />
      </button>
      <button
        appearance="text"
        className="sc-dkzDqf sc-ftvSup weoio gJsrXC"
        color="red"
        data-element="button"
        disabled={true}
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-jqUVSM cKPcLS"
          gap={0.75}
        />
      </button>
    </div>
  </section>
</div>
`;

exports[`Storyshots Components/Button Variants 1`] = `
<div
  className="sc-jqUVSM gFyWwL"
>
  <div
    className="sc-hAZoDl gyXFzs"
  >
    <section
      className="sc-ksZaOG brpprN"
      span={4}
    >
      <div
        className="sc-crXcEl dvcSNb"
        gap={1}
      >
        <h3
          className="sc-fnykZs lfSzVV c-text--heading-3"
        >
          Thin
        </h3>
        <button
          appearance="primary"
          className="sc-dkzDqf sc-hKMtZM jSjkyK jyzXNF"
          data-element="button"
          size="medium"
          variant="thin"
        >
          Button
        </button>
      </div>
    </section>
    <section
      className="sc-ksZaOG brpprN"
      span={4}
    >
      <div
        className="sc-crXcEl dvcSNb"
        gap={1}
      >
        <h3
          className="sc-fnykZs lfSzVV c-text--heading-3"
        >
          Medium
        </h3>
        <button
          appearance="primary"
          className="sc-dkzDqf sc-hKMtZM eOixSn jyzXNF"
          data-element="button"
          size="medium"
          variant="medium"
        >
          Button
        </button>
      </div>
    </section>
    <section
      className="sc-ksZaOG brpprN"
      span={4}
    >
      <div
        className="sc-crXcEl dvcSNb"
        gap={1}
      >
        <h3
          className="sc-fnykZs lfSzVV c-text--heading-3"
        >
          Large
        </h3>
        <button
          appearance="primary"
          className="sc-dkzDqf sc-hKMtZM eaXzyM jyzXNF"
          data-element="button"
          size="medium"
          variant="large"
        >
          Button
        </button>
      </div>
    </section>
  </div>
</div>
`;
